--- a/microcloud-config-client.yml
+++ b/microcloud-config-client.yml
@@ -1,7 +1,7 @@
 spring:
-  profiles:
-    active:
-    - dev
+   profiles:
+      active:
+        - dev
 ---
 server:
   port: 8201
@@ -9,12 +9,17 @@ server:
 spring:
   profiles: dev
   application:
-    name: microconfig-test-client
+      name: microconfig-test-client5
 
 eureka:
-  client:
-    service-url:
-      defaultZone: http://admin:admin@localhost:7001/eureka
+ client:
+  serviceUrl:
+    defaultZone: http://admin:enjoy@localhost:7301/eureka
+  register-with-eureka: false
+
+info:
+  app.name: microcloud-config-client-dev2
+  company.name: enjoy2
 ---
 server:
   port: 8102
@@ -22,9 +27,14 @@ server:
 spring:
   profiles: beta
   application:
-    name: microconfig-test-client
+      name: microconfig-test-client5
 
 eureka:
-  client:
-    service-url:
-      defaultZone: http://admin:admin@localhost:7001/eureka
+ client:
+  serviceUrl:
+    defaultZone: http://admin:enjoy@localhost:7301/eureka
+  register-with-eureka: false
+  
+info:
+  app.name: microcloud-config-client-beta2
+  company.name: enjoy
