--- a/microcloud-config-client.yml
+++ b/microcloud-config-client.yml
@@ -9,7 +9,7 @@ server:
 spring:
   profiles: dev
   application:
-      name: microconfig-test-client5
+      name: microconfig-test-client
 
 eureka:
  client:
@@ -18,8 +18,8 @@ eureka:
   register-with-eureka: false
 
 info:
-  app.name: microcloud-config-client-dev2
-  company.name: enjoy2
+  app.name: microcloud-config-client-dev
+  company.name: com.zf.mo
 ---
 server:
   port: 8102
