--- a/microcloud-config-client.yml
+++ b/microcloud-config-client.yml
@@ -14,7 +14,7 @@ spring:
 eureka:
  client:
   serviceUrl:
-    defaultZone: http://admin:enjoy@localhost:7301/eureka
+    defaultZone: http://admin:admin@localhost:7301/eureka
   register-with-eureka: false
 
 info:
@@ -27,14 +27,14 @@ server:
 spring:
   profiles: beta
   application:
-      name: microconfig-test-client5
+      name: microconfig-test-client
 
 eureka:
  client:
   serviceUrl:
-    defaultZone: http://admin:enjoy@localhost:7301/eureka
+    defaultZone: http://admin:admin@localhost:7301/eureka
   register-with-eureka: false
   
 info:
-  app.name: microcloud-config-client-beta2
-  company.name: enjoy
+  app.name: microcloud-config-client-beta
+  company.name: microconfig-test-client
